[project]
name = "roadmaps-python-expense-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "quantuumhedgehog", email = "lutso.mykhailo@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
roadmaps-python-expense-tracker = "roadmaps_python_expense_tracker:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
